syntax = "proto3";

package elastic.apm.v1;

option go_package = "github.com/elastic/apm-data/model/modelpb";

message Faas {
  string id = 1;
  optional bool cold_start = 2;
  string execution = 3;
  string trigger_type = 4;
  string trigger_request_id = 5;
  string name = 6;
  string version = 7;
}
